@startuml
!define MODEL_COLOR #FFCCFF
!define CONTROLLER_COLOR #CCCCFF
!define ACTION_COLOR #CCFFCC

package "Models" <<Database>> {
  class User <<Model>> {
    ..
  }
  class Post <<Model>> {
    ..
  }
  class Comment <<Model>> {
    ..
  }
}

package "Controllers" <<Frame>> {
  class UsersController <<Controller>> {
    +index()
  }
  class PostsController <<Controller>> {
    +index()
  }
}

User --> "*" Post : posts
User --> "*" Comment : comments
Post --> "1" User : user
Post --> "*" Comment : comments
Comment --> "1" User : user
Comment --> "1" Post : post
GET__api_v1_users --> index : routes_to
GET__api_v1_posts --> index : routes_to
index --> UserService : fetch_users
index --> PostService : list_posts
UserService --> User : User.all
PostService --> Post : Post.published
PostService --> User : includes(:user)

@enduml